name:                servant-match
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cocreature/servant-match#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           (C) 2017 Moritz Kiefer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Servant.Match
  build-depends:      base >= 4.7 && < 5
                    , bytestring
                    , http-types
                    , network-uri
                    , servant
                    , text
                    , utf8-string
  default-language:   Haskell2010

test-suite test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , hspec
                    , network-uri
                    , servant
                    , servant-match
                    , text
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/cocreature/servant-match
